--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "a micro service to handle user authorization through registration, search, editing and deletion",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "node ./",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "start": "node ./dist/index.js",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eduardo Pereira",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
