--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
   }
 }
